--- a/Zad2 CRUD/conf/application.conf
+++ b/Zad2 CRUD/conf/application.conf
@@ -100,6 +100,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
+
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
 }
@@ -317,12 +318,11 @@ play.filters {
 # Evolutions allows database scripts to be automatically run on startup in dev mode
 # for database migrations. You must enable this by adding to build.sbt:
 #
-libraryDependencies += evolutions
+# libraryDependencies += evolutions
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  enabled = true
-  db.default.enabled =true
+  db.default.enabled = true
 }
 
 ## Database Connection Pool
