--- a/Zad2 CRUD/conf/application.conf
+++ b/Zad2 CRUD/conf/application.conf
@@ -100,7 +100,6 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
-
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
 }
@@ -318,11 +317,12 @@ play.filters {
 # Evolutions allows database scripts to be automatically run on startup in dev mode
 # for database migrations. You must enable this by adding to build.sbt:
 #
-# libraryDependencies += evolutions
+libraryDependencies += evolutions
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  db.default.enabled = true
+  enabled = true
+  db.default.enabled =true
 }
 
 ## Database Connection Pool
