--- a/Zad2 CRUD/conf/application.conf
+++ b/Zad2 CRUD/conf/application.conf
@@ -100,6 +100,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
+  enables += "play.filter.cors.CorsFilter"
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
 }
@@ -232,6 +233,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
+  enables += "play.filter.cors.CorsFilter"
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
