--- a/Zad2 CRUD/conf/application.conf
+++ b/Zad2 CRUD/conf/application.conf
@@ -256,12 +256,11 @@ play.filters {
   cors {
     # Filter paths by a whitelist of path prefixes
     #pathPrefixes = ["/some/path", ...]
-
     # The allowed origins. If null, all origins are allowed.
     #allowedOrigins = ["https://www.example.com"]
-
+    allowedOrigins = ["http://localhost:3000"]
     # The allowed HTTP methods. If null, all methods are allowed
-    #allowedHttpMethods = ["GET", "POST"]
+    allowedHttpMethods = ["GET", "POST"]
   }
 
   ## CSRF Filter
