--- a/play_app/conf/application.conf
+++ b/play_app/conf/application.conf
@@ -260,7 +260,7 @@ play.filters {
     #allowedOrigins = ["https://www.example.com"]
     allowedOrigins = ["http://localhost:3000"]
     # The allowed HTTP methods. If null, all methods are allowed
-    allowedHttpMethods = ["GET", "POST"]
+    allowedHttpMethods = ["GET", "POST", "PUT", "PATCH", "OPTION", "DELETE"]
   }
 
   ## CSRF Filter
