Update Controllers and add fetching data connection

--- a/play_app/conf/application.conf
+++ b/play_app/conf/application.conf
@@ -100,7 +100,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
-  enables += "play.filter.cors.CorsFilter"
+  # enabled += "play.filter.cors.CorsFilter"
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
 }
@@ -233,7 +233,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
-  enables += "play.filter.cors.CorsFilter"
+  enabled += "play.filters.cors.CORSFilter"
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -247,6 +247,7 @@ play.filters {
 #
 play.filters {
   ## CORS filter configuration
+    enables += "play.filter.cors.CorsFilter"
   # https://www.playframework.com/documentation/latest/CorsFilter
   # ~~~~~
   # CORS is a protocol that allows web applications to make requests from the browser
@@ -261,6 +262,7 @@ play.filters {
     allowedOrigins = ["http://localhost:3000"]
     # The allowed HTTP methods. If null, all methods are allowed
     allowedHttpMethods = ["GET", "POST", "PUT", "PATCH", "OPTION", "DELETE"]
+      allowedHttpHeaders = ["Accept"]
   }
 
   ## CSRF Filter
